Fixed overscroll artifacts on mobile.

--- a/django-project/static/components/sass/_podcastle-base.scss
+++ b/django-project/static/components/sass/_podcastle-base.scss
@@ -94,3 +94,7 @@ p {
   }
 }
 
+body{
+  background-color: #333;
+}
+
